# mqtt-dashboard

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
data/: io.github.yeager.MqttDashboard.desktop
locale/sv/LC_MESSAGES/: mqtt-dashboard.mo
po/: mqtt-dashboard.pot  sv.po
po/locale/sv/LC_MESSAGES/: mqtt-dashboard.mo
src/mqtt_dashboard/: __init__.py  __main__.py  main.py
